# Checkers

./: CMakeLists.txt  README.md  diagram.puml  main.cpp
Cpp/Board/: Board.cpp
Cpp/Pieces/: IllegalSpace.cpp  Piece.cpp  Square.cpp
Cpp/Pieces/Figures/: Normal.cpp  Queen.cpp
Cpp/Util/: MoveUtil.cpp
Headers/Board/: Board.h
Headers/Pieces/: IllegalSpace.h  Piece.h  Square.h
Headers/Pieces/Figures/: Normal.h  Queen.h
Headers/Util/: MoveUtil.h
